# ssg-dj

./: .editorconfig  .gitattributes  .gitignore  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  REUSE.toml  default.nix  justfile  rust-toolchain.toml
.github/workflows/: ci.yaml
docs/dev/: integrations.md
docs/examples/: config.toml
docs/reference/: commands.md  configuration.md
src/: cli.rs  lib.rs  main.rs
xtask/: Cargo.toml
xtask/src/: completions.rs  main.rs  manpages.rs
