# SPDX-FileCopyrightText: 2025 Matthew Mark Ibbetson
# SPDX-FileContributor: Matthew Mark Ibbetson
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "xtask"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "cargo-xtask"
path = "src/main.rs"

[dependencies]
ssg-dj = { path = "../" }
clap.workspace = true
clap_complete = "4.5.38"        # MIT or Apache-2.0
clap_complete_nushell = "4.5.4" # MIT or Apache-2.0
clap_mangen = "0.2.24"          # MIT or Apache-2.0
